# agentic-roadmap

./: .gitignore  LICENSE  README.md  chat-gpt-prompt.py  pyproject.toml  run-problems.sh  web-app.sh
2-FirstAgent/: README.md
2-FirstAgent/Iteration_1/: README.md  main.py
2-FirstAgent/Iteration_2/: README.md  main.py
2-FirstAgent/Iteration_3/: README.md  agents.py  logging_config.py  main.py  protocols.py  schemas.py  supervisor.py
2-FirstAgent/Iteration_4/: README.md  agents.py  schemas.py  supervisor.py
2-FirstAgent/Iteration_5a/: README.md  agents.py  main.py  protocols.py  schemas.py  supervisor.py  tools.py
2-FirstAgent/Iteration_5b/: agents.py  compute.py  logging_config.py  main.py  schemas.py  supervisor.py  tools.py
Iteration_8/: README.md  logging_config.py  main.py  schemas.py  tool_registry.py
docs/API/: AGENTIC_API.md  APP_DOCUMENT_FROM_TEXT_API.md  APP_WEB_API.md  DOMAIN_ARITHMETIC_API.md  DOMAIN_DOCUMENT_API.md  DOMAIN_INTENT_API.md  DOMAIN_SENTIMENT_API.md
posts/2025-12-24T19-47-10-losing-control-to-regain-it/: content.md  intent.yaml  meta.yaml
posts/2025-12-25T20-07-41-restrictive-agents-are-cheaper-and-thats-not-an-accident/: content.md  intent.yaml  meta.yaml
posts/2025-12-27T02-12-39-speed-vs-understanding-in-ai-driven-development/: content.md  intent.yaml  meta.yaml
posts/2025-12-27T13-44-17-becoming-the-supervisor-how-building-an-agentic-framework-changed-how-i-develop-software/: content.md  intent.yaml  meta.yaml
posts/2025-12-31T01-43-57-why-most-agentic-systems-fail-in-production/: content.md  intent.yaml  meta.yaml
scripts/: ai_behavior_prompt.txt
src/: agent_dispatcher.py  agents.py  main.py  protocols.py  schemas.py  supervisor.py
src/agentic/: README.md  agent_dispatcher.py  controller.py  main.py  protocols.py  schemas.py  supervisor.py  supervisor_protocol.py  supervisor_result.py  supervisor_types.py
src/agentic_framework/: transform_controller.py
src/agentic_workflow/: README.md  __init__.py  agent_dispatcher.py  analysis_controller.py  controller.py  controller_protocol.py  controller_types.py  protocols.py  schemas.py  tool_registry.py
src/problem/: __init__.py
src/tools/: __init__.py  compute.py
src/web/: api.py  bootstrap.py  persistence.py  schemas.py  security.py
tests/: test_supervisor_meta_call.py  test_supervisor_response_contract.py  test_writer_atomic_routing.py  test_writer_invariants.py  test_writer_persistence.py  test_writer_refine_semantics.py  test_writer_reject_retry.py  test_writer_section_order.py  test_writer_single_task_execution.py  test_writer_snapshot_fidelity.py
tests/Iteration_5b/: test_agents.py
tests/_legacy_legal_document_ingest/: test_cli_v1_envelope.py  test_contract_v1_determinism.py  test_contract_v1_failure_determinism.py  test_contract_v1_smoke.py
tests/agentic/: test_supervisor_meta_call.py  test_supervisor_response_contract.py
tests/apps/: test_text_intent_adapter.py  test_text_prompt_refiner_controller.py
tests/blog/: test_status_invariants.py  test_visibility.py
tests/legal_document_ingest/: test_I1_outcome_exclusivity.py  (+4 more)
(+276 files in other folders)
