[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentic*", "domain*"]

[project.scripts]
agentic = "agentic.main:main"
agentic-arithmetic = "domain.arithmetic.main:main"
agentic-sentiment = "domain.sentiment.main:main"
agentic-coder = "domain.coder.main:main"
agentic-writer = "domain.writer.main:main"
agentic-document = "domain.document.main:main"

[tool.poetry.scripts]
arithmetic = "domain.arithmetic.main:main"
sentiment = "domain.sentiment.main:main"
coder = "domain.coder.main:main"
writer = "domain.writer.main:main"
document = "domain.document.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
