[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "gradio>=6.2.0",
    "markdown>=3.10",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentic*", "domain*"]

[project.scripts]
agentic = "agentic.main:main"
agentic-arithmetic = "domain.arithmetic.main:main"
agentic-sentiment = "domain.sentiment.main:main"
agentic-coder = "domain.coder.main:main"
agentic-document-writer = "apps.document_writer.main:main"
agentic-document-writer-ui = "apps.document_writer.ui:main"
agentic-document-from-text = "apps.document_from_text.main:main"
blog = "apps.blog.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
