[project]
name = "agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "boto3>=1.42.19",
    "gradio>=6.2.0",
    "markdown>=3.10",
    "openai>=2.8.1",
    "pydantic>=2.12.4",
    "pytesseract>=0.3.13",
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["agentic*", "domain*"]

[project.scripts]
agentic = "agentic.main:main"
agentic-arithmetic = "experiments.arithmetic.main:main"
agentic-sentiment = "experiments.sentiment.main:main"
agentic-coder = "experiments.coder.main:main"
agentic-document-writer = "apps.document_writer.main:main"
agentic-document-writer-ui = "apps.document_writer.ui:main"
agentic-document-from-text = "apps.document_from_text.main:main"
agentic-legal-doc = "apps.legal_document_ingest.main:main"
blog = "apps.blog.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
norecursedirs = ["_legacy_*"]